<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Second Screen"
                app:navigationIcon="@drawable/ic_back"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TextAppearance.SecondScreenTitle"/>

        </com.google.android.material.appbar.AppBarLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E2E3E4"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/welcome"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="John Doe"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_selected_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/selected_user_name"/>

                <Button
                    android:id="@+id/btn_choose"
                    android:layout_width="310dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="41dp"
                    android:layout_gravity="bottom|center"
                    android:background="@drawable/button_rectangle"
                    android:text="@string/choose_a_user"/>
            </FrameLayout>
            
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>